# c-two

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  findings.md  progress.md  pyproject.toml  task_plan.md
.github/: copilot-instructions.md
.github/scripts/: check_cli_release.py
.github/workflows/: ci.yml  cli-release.yml
cli/: Cargo.toml  README.md
cli/src/: contract.rs  main.rs  registry.rs  relay.rs
cli/tests/: cli_help.rs  contract_commands.rs  registry_commands.rs  relay_args.rs
core/: Cargo.toml
core/foundation/c2-config/: Cargo.toml
core/foundation/c2-config/src/: identity.rs  ipc.rs  lib.rs  relay.rs  remote.rs  resolver.rs
core/runtime/c2-runtime/: Cargo.toml
core/runtime/c2-runtime/src/: identity.rs  lib.rs  outcome.rs  session.rs
core/transport/c2-server/: Cargo.toml
core/transport/c2-server/src/: connection.rs  dispatcher.rs  heartbeat.rs  lib.rs  response.rs  runtime.rs  scheduler.rs  server.rs
docs/: memory-pressure-backpressure.md  roadmap.md  roadmap.zh-CN.md
docs/issues/: chunk-management-gaps.md  relay-large-payload-transport-design.md  relay-stale-owner-revival-race.md
docs/plans/: 2026-03-29-wire-v1-removal.md  2026-04-27-cross-language-residue-review.md  2026-05-04-direct-ipc-control-helpers-rust.md  2026-05-04-remote-ipc-scheduler-rust-config.md  2026-05-04-route-concurrency-rust-authority.md  2026-05-04-thin-sdk-rust-core-boundary.md  2026-05-05-runtime-session-rust-authority.md  2026-05-06-canonical-error-rust-authority.md  2026-05-06-transfer-hook-error-taxonomy-repair.md  2026-05-06-unified-buffer-lease-rust-authority.md  2026-05-07-ipc-config-validation-rust-authority.md  2026-05-07-relay-ipc-endpoint-identity.md  c-two-rpc-v2-roadmap.md  (+7 more)
examples/: README.md
(+245 files in other folders)
