[package]
name = "c2-config"
edition.workspace = true
version.workspace = true
description = "Shared configuration types for C-Two IPC transport, memory pool, and relay"

[lib]
name = "c2_config"

[dependencies]
dotenvy = "0.15"
gethostname = "1.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
