[package]
name = "c2-runtime"
edition.workspace = true
version.workspace = true
description = "C-Two language-neutral process runtime session"

[lib]
name = "c2_runtime"

[dependencies]
c2-config = { path = "../../foundation/c2-config" }
c2-contract = { path = "../../foundation/c2-contract" }
c2-mem = { path = "../../foundation/c2-mem" }
c2-http = { path = "../../transport/c2-http" }
c2-server = { path = "../../transport/c2-server" }
parking_lot = { workspace = true }
tokio = { version = "1", features = ["rt", "time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
c2-ipc = { path = "../../transport/c2-ipc" }
