[package]
name = "c2-server"
edition.workspace = true
version.workspace = true
description = "Tokio-based UDS server for C-Two IPC transport"

[dependencies]
c2-config = { path = "../../foundation/c2-config" }
c2-error = { path = "../../foundation/c2-error" }
c2-contract = { path = "../../foundation/c2-contract" }
c2-wire = { path = "../../protocol/c2-wire" }
c2-mem = { path = "../../foundation/c2-mem" }
parking_lot = { workspace = true }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "macros", "io-util", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
